# legal-hub

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f62c1e568250_initial.py  f9c88e895420_create_users_table.py
backend/app/: main.py
backend/app/api/: auth.py  health.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/scripts/: seed.py
frontend/: .npmrc  Dockerfile  frontend.Dockerfile  global.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/login/: page.tsx
frontend/hooks/: useRequireAuth.ts
frontend/local_packages/@mts-ds/base/: package.json
frontend/local_packages/@mts-ds/granat-react-badge/: CHANGELOG.md  package.json
frontend/local_packages/@mts-ds/granat2-react-avatar/: package.json
frontend/local_packages/@mts-ds/granat2-react-badge/: package.json
frontend/local_packages/@mts-ds/granat2-react-banner-primary/: package.json
frontend/local_packages/@mts-ds/granat2-react-banner-secondary/: package.json
frontend/local_packages/@mts-ds/granat2-react-banner-tertiary/: package.json
frontend/local_packages/@mts-ds/granat2-react-breadcrumb/: package.json
frontend/local_packages/@mts-ds/granat2-react-bulleted-list/: package.json
frontend/local_packages/@mts-ds/granat2-react-button/: README.md  package.json
frontend/local_packages/@mts-ds/granat2-react-card/: README.md  package.json
frontend/local_packages/@mts-ds/granat2-react-checkbox/: package.json
frontend/local_packages/@mts-ds/granat2-react-control-list/: package.json
frontend/local_packages/@mts-ds/granat2-react-counter/: package.json
frontend/local_packages/@mts-ds/granat2-react-divider/: README.md  package.json
frontend/scripts/: backup-mts-ds.js  restore-mts-ds.js
frontend/types/: next-auth.d.ts
(+28 files in other folders)
